# VectorMaximumWorker

./: .gitignore  Dockerfile  README.md  build.sh  run.sh
code/: CMakeLists.txt  build.sh  run.sh
code/src/: main.cpp  vector_maximum_worker.cpp  vector_maximum_worker.hpp
config/: container  organization
config/etc/: sudoers
